--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Home Page</title>
     <link rel="icon" href="TitleLogo.png" sizes="100x100">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
    <header>
