--- a/Apps.html
+++ b/Apps.html
@@ -3,7 +3,7 @@
 <head>
     <title>All Apps</title>
     <link rel="icon" href="TitleLogo.png" sizes="100x100">
-    <link rel="stylesheet" type="text/css" href="css/styleapp.css">
+    <link rel="stylesheet" type="text/css" href="styleapp.css">
 </head>
 <body>
    <header>
